updated workshop slides

--- a/PresentationMaterials/command-line-wizardry.html
+++ b/PresentationMaterials/command-line-wizardry.html
@@ -400,17 +400,16 @@ Pete Lawson, PhD
 </div>
 
 </section>
-<section id="speaker" class="slide level2">
-<h2>Speaker</h2>
-<p>Pete Lawson <span class="citation" data-cites="petethelib">@petethelib</span></p>
-<p>Data and Visualization Librarian, with a background in …</p>
-</section>
-<section id="introduction" class="slide level2">
-<h2>Introduction</h2>
+<section id="before-we-begin" class="slide level2">
+<h2>Before we begin</h2>
+<p>View the slides for today’s session at: <br> <a href="https://bit.ly/command-line-wiz-slides">bit.ly/command-line-wiz-slides</a></p>
+<div class="fragment">
+<p>If you would like to follow along, make sure you have a terminal emulator installed. For instructions on how to do so, visit the workshop page instructions: <br> <a href="https://jhu-data-services.github.io/data-bytes-command-line-wizardry/#pre-class-instructions">Pre-Class Instructions</a></p>
+</div>
 </section>
 <section id="section" class="slide level2" data-auto-animate="true">
 <h2 data-id="quarto-animate-title"></h2>
-<p>This talk is not exhaustive.</p>
+<p>This session is not exhaustive.</p>
 <p>It’s meant to give you a brief introduction to the command line, and inspire you with some of the really powerful command line utilities, and convince you it’s…</p>
 <div style="margin-top: 0px;">
 <p><strong>magic!</strong></p>
@@ -422,7 +421,7 @@ Pete Lawson, PhD
 <p><strong>magic!</strong></p>
 </div>
 
-<img data-src="https://media.tenor.com/WUVqyY-KBbAAAAAd/your-a-wizard-harry.gif" class="r-stretch"></section>
+<img data-src="https://media.tenor.com/WUVqyY-KBbAAAAAd/your-a-wizard-harry.gif" width="350" class="r-stretch"></section>
 <section id="unix" class="slide level2">
 <h2>Unix</h2>
 <div class="columns">
